# Basic-RISC-V-Core

./: .gitignore
Docs/Daily_Logs/: May-2026-Logs.md
Docs/Notes/: CPU_Specification.md  Simulator_Notes.md
Docs/Tasks/: Simulator_Tasks.canvas  Task_Template.canvas
Simulator/: CMakeLists.txt  brvc_arch.h  brvc_cpu.cpp  brvc_cpu.h  brvc_ram.cpp  brvc_ram.h  brvc_rom.cpp  brvc_rom.h  brvc_system.cpp  brvc_system.h  brvc_utils.h
Simulator/Test/: brvc_rom_test.cpp  brvc_test.cpp  brvc_test.h
Simulator/include/arch/: brvc_arch.h
Simulator/include/cpu/: brvc_cpu.h
Simulator/include/rom/: brvc_rom.h
Simulator/include/system/: brvc_system.h
Simulator/include/utils/: brvc_utils.h
Simulator/src/: CMakeLists.txt  brvc_simulator.cpp
Simulator/src/cpu/: brvc_cpu.cpp
Simulator/src/ram/: brvc_ram.cpp
Simulator/src/rom/: brvc_rom.cpp
Simulator/src/system/: brvc_system.cpp
Simulator/test/include/framework/: brvc_test.h
Simulator/test/include/rom/: brvc_rom_test.h
Simulator/test/src/: CMakeLists.txt  brvc_test_main.cpp
Simulator/test/src/framework/: brvc_test.cpp
Simulator/test/src/rom/: brvc_rom_test.cpp
